# CP_prac

./: a.cpp  debugger_template.cpp  debuggingMultisetQuestion.cpp
.cph/: .a.cpp_739f7f9409c0450fa2a927eb3a65c99a.prob  .debugger_template.cpp_fbe0c6f9d19d3a2cfc3fa60209ef1662.prob  .debuggingMultisetQuestion.cpp_834cb7239f628c85d68ce5b294dddc11.prob
1200/: 2020B.cpp  2041B.cpp  2053B.cpp
Codeforces/: 1542.cpp  1551A.cpp  CMakeLists.txt  q1.cpp
Codeforces/178 div 2 edu/: a.cpp  b.cpp  c.cpp  try.cpp
Codeforces/178 div 2 edu/.cph/: .a.cpp_161f9d424a339feeec3ce8b8b2ecf296.prob  .b.cpp_8b77d8361944810d6517d860dfd03780.prob  .c.cpp_7053611ec84cdd6fc5c3b95d440db42d.prob  .try.cpp_a06704c0c408f89313a4150789c611de.prob
Codeforces/981 div 3/: D.cpp  template.cpp
Codeforces/981 div 3/.cph/: .D.cpp_b0748b607541fb0a3b31470a2a4427fd.prob  .template.cpp_deb175df5b07dc5e78f995b7df8e7e57.prob
Codeforces/990 Div 2/: a.cpp  b.cpp  c.cpp  new.cpp
Codeforces/990 Div 2/.cph/: .b.cpp_156892a7884f62696568c82009a38bdb.prob  .c.cpp_999b4958cc289d77a96c6cefd08be781.prob  .new.cpp_23c2f8f854f28409200da9a5e69af45c.prob
Codeforces/991 div3/: a.cpp  b.cpp  new.cpp
Codeforces/991 div3/.cph/: .a.cpp_d18b95dc8608d843549a9bbbc79e426a.prob  .b.cpp_e8f51f09bcf68c821c76fc93fa290258.prob  .new.cpp_e6bbf5520d0466dc7cac3121979cf98c.prob
Codeforces/Round 935 (Div3) - Virtual/: probA- 1935A.c  probC- 1935C.c
Codeforces/Round 937 (Div4)/: 1950B.cpp  PDSlabQ3.c  probA-1950A.cpp  probC-1950C.cpp  waterProblem.c
Contest- div2/: contest.cpp  contest_2.cpp
Div2B ladder AZ/: 1747B.cpp  (+7 more)
(+259 files in other folders)
